--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation 'io.micrometer:micrometer-registry-prometheus:1.2.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.0.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.9'
+    implementation 'org.hamcrest:hamcrest:2.1'
 }
 
 test {
